# dependency_injection_cpp

./: CMakeLists.txt  README.md
include/: bus.h  motorcycle.h  pilot.h  vehicle.h
src/: bus.cpp  main.cpp  motorcycle.cpp  pilot.cpp
